# Mesa de Ayuda/MesaDeAyudaRest/src/controllers/denunciaController.js
@@ -23,10 +23,13 @@ const filtrarDenuncias = (denunciasAFiltrar)=>{
 const obtenerDenuncias = async(req,res)=>{
     try{
         let denuncias = await DenunciaService.getAll();
-        return res.render('listaDenuncias', {filtroDenuncias: filtrarDenuncias(denuncias)});  
+        //return res.render('listaDenuncias', {filtroDenuncias: filtrarDenuncias(denuncias)}); 
+        return res.status(200).send({
+            denuncias
+        });
     }catch(err){
         console.log(err);
-        return res.status(500).json({
+        return res.status(500).send({
             message: "Ocurrio un error --> "+err
         });
     }
@@ -37,19 +40,13 @@ const obtenerDenuncia = async(req,res)=>{
         const {id} = req.params;
         let denuncia = await DenunciaService.getById(id);
         if(denuncia){
-            res.status(200).json({
-                message: "denuncia encontrada exitosamente",
-                data: denuncia
-            });
-        }else{
-            res.status(200).json({
-                message: "no se encontro la denuncia",
-                data: denuncia
+            return res.status(200).send({
+                denuncia
             });
         }
     }catch(err){
         console.log(err);
-        res.status(500).json({
+        res.status(500).send({
             message: "Ocurrio un error --> "+err
         });
     }
@@ -63,11 +60,14 @@ const obtenerDenunciasPorEstado = async(req,res)=>{
         else denuncias = await DenunciaService.getAllByState(estado);
 
         if(denuncias){
-            return res.render('listaDenuncias', {filtroDenuncias: filtrarDenuncias(denuncias)});  
+           // return res.render('listaDenuncias', {filtroDenuncias: filtrarDenuncias(denuncias)});  
+           return res.status(200).send({
+                denuncias
+           });
         }
     }catch(err){
         console.log(err);
-        res.status(500).json({
+        res.status(500).send({
             message: "Ocurrio un error --> "+err
         });
     }
@@ -86,14 +86,18 @@ const crearDenuncia = async (req,res)=>{
                 "userId": user.id
             };
             let denunciaCreada = await DenunciaService.add(denuncia);
-            res.redirect("/home");
+            //res.redirect("/home");
+            res.status(200).send({
+                message: 'Denuncia creada exitosamente!!!',
+                denunciaCreada
+            });
 
-        }else return res.status(200).json({
+        }else return res.status(200).send({
             message: "El User indicado no existe"
         });
     }catch(err){
         console.log(err);
-        return res.status(500).json({
+        return res.status(500).send({
             message: "Ocurrio un error --> "+err
         });    
     }
@@ -107,10 +111,14 @@ const modificarDenuncia = async(req,res)=>{
                 "estado": "resuelto",
         };
         let denunciaModificada = await DenunciaService.update(denuncia);
-        return res.redirect('/denuncias/lista');
+        //return res.redirect('/denuncias/lista');
+        res.status(200).send({
+            message: 'Denuncia modificada exitosamente!!!',
+            denunciaModificada
+        });
     }catch(err){
         console.log(err);
-        return res.status(500).json({
+        return res.status(500).send({
             message: "Ocurrio un error --> "+err
         });
     }
@@ -119,11 +127,14 @@ const modificarDenuncia = async(req,res)=>{
 const eliminarDenuncia = async(req,res)=>{
     try{
         const {id} = req.params;
-        let denunciaEliminada = await DenunciaService.delete(id);
-        return res.redirect('/denuncias/lista');
+        await DenunciaService.delete(id);
+        //return res.redirect('/denuncias/lista');
+        res.status(200).send({
+            message: 'Denuncia eliminada exitosamente!!!'
+        });
     }catch(err){
         console.log(err);
-        return res.status(500).json({
+        return res.status(500).send({
             message: "Ocurrio un error --> "+err
         });
     }
