# Mesa de Ayuda/MesaDeAyudaRest/src/swagger.json
@@ -48,9 +48,13 @@
                         "type": "string",
                         "description": "ID dependiendo del tipo de usuario"
                       },
-                      "nombre": {
+                      "auth_token": {
                         "type": "string",
-                        "description": "Nombre del usuario"
+                        "description": "Token de autorizacion para el usuario"
+                      },
+                      "username": {
+                        "type": "string",
+                        "description": "Username del usuario"
                       }
                     }
                   }
@@ -89,10 +93,59 @@
           }
         }
       },
+      "/logout": {
+        "post": {
+          "tags": [
+            "Users"
+          ],
+          "summary": "Finaliza la session del usuario logueado",
+          "parameters": [
+            {
+              "name": "auth_token",
+              "in": "header",
+              "required": true,
+              "description": "Token de autorizacion",
+              "schema": {
+                "type": "string"
+              }
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "Informacion del usuario",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object",
+                    "properties": {
+                      "message": {
+                        "type": "string",
+                        "description": "Mensaje devuelto informando que paso con la session"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+
       "/denuncias/lista": {
         "get": {
           "tags": [
             "Denuncias"
+          ],
+          "parameters": [
+            {
+              "name": "auth_token",
+              "in": "header",
+              "required": true,
+              "description": "Token de autorizacion",
+              "schema": {
+                "type": "string"
+              }
+            }
           ],
           "summary": "Trae todos las denuncias",
           "responses": {
@@ -120,20 +173,26 @@
           "summary": "Devuelve un listado filtrado de las denuncias por su estado",
           "parameters": [
             {
-                "name": "estado",
-                "in": "path",
-                "required": true,
-                "description": "estado por el cual se filtraran las denuncias",
-                "schema": {
-                  "type": "string"
-                }
+              "name": "auth_token",
+              "in": "header",
+              "required": true,
+              "description": "Token de autorizacion",
+              "schema": {
+                "type": "string"
               }
+            }
           ],
           "requestBody": {
             "content": {
-              "multipart/form-data": {
+              "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Denuncia"
+                  "type": "object",
+                  "properties": {
+                    "estado":{
+                      "type": "string",
+                      "description": "Estado por el cual se filtraran las denuncias"
+                    }
+                  }
                 }
               }
             }
@@ -164,6 +223,15 @@
           "summary": "Actualiza una denuncias dandola por resuelta",
           "parameters": [
             {
+              "name": "auth_token",
+              "in": "header",
+              "required": true,
+              "description": "Token de autorizacion",
+              "schema": {
+                "type": "string"
+              }
+            },
+            {
                 "name": "id",
                 "in": "path",
                 "required": true,
@@ -173,15 +241,6 @@
                 }
             }
           ],
-          "requestBody": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Denuncia"
-                }
-              }
-            }
-          },
           "responses": {
             "200": {
               "description": "La denuncia fue actualizada cambiandole su estado a : 'resuelto' ",
@@ -204,6 +263,15 @@
           "summary": "Rechaza una denuncia dandole de baja",
           "parameters": [
             {
+              "name": "auth_token",
+              "in": "header",
+              "required": true,
+              "description": "Token de autorizacion",
+              "schema": {
+                "type": "string"
+              }
+            },
+            {
                 "name": "id",
                 "in": "path",
                 "required": true,
@@ -213,15 +281,6 @@
                 }
             }
           ],
-          "requestBody": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Denuncia"
-                }
-              }
-            }
-          },
           "responses": {
             "200": {
               "description": "La denuncia fue rechazada, siendo dada de baja de la BD ",
@@ -242,6 +301,17 @@
             "Reclamos"
           ],
           "summary": "Trae todos los reclamos",
+                    "parameters": [
+            {
+              "name": "auth_token",
+              "in": "header",
+              "required": true,
+              "description": "Token de autorizacion",
+              "schema": {
+                "type": "string"
+              }
+            }
+          ],
           "responses": {
             "200": 
             {
@@ -268,20 +338,26 @@
           "summary": "Devuelve un listado filtrado de los reclamos por su estado",
           "parameters": [
             {
-                "name": "estado",
-                "in": "path",
-                "required": true,
-                "description": "estado por el cual se filtraran las denuncias",
-                "schema": {
-                  "type": "string"
-                }
+              "name": "auth_token",
+              "in": "header",
+              "required": true,
+              "description": "Token de autorizacion",
+              "schema": {
+                "type": "string"
               }
+            }
           ],
           "requestBody": {
             "content": {
-              "multipart/form-data": {
+              "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Reclamo"
+                  "type": "object",
+                  "properties": {
+                    "estado":{
+                      "type": "string",
+                      "description": "Estado por el cual se filtraran los reclamos"
+                    }
+                  }
                 }
               }
             }
@@ -312,6 +388,15 @@
           "summary": "Actualiza un reclamo dandola por resuelto",
           "parameters": [
             {
+              "name": "auth_token",
+              "in": "header",
+              "required": true,
+              "description": "Token de autorizacion",
+              "schema": {
+                "type": "string"
+              }
+            },
+            {
                 "name": "id",
                 "in": "path",
                 "required": true,
@@ -321,15 +406,6 @@
                 }
             }
           ],
-          "requestBody": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Reclamo"
-                }
-              }
-            }
-          },
           "responses": {
             "200": {
               "description": "El reclamo fue actualizado cambiandole su estado a : 'resuelto' ",
@@ -352,6 +428,15 @@
           "summary": "Rechaza un reclamo dandole de baja de la BD",
           "parameters": [
             {
+              "name": "auth_token",
+              "in": "header",
+              "required": true,
+              "description": "Token de autorizacion",
+              "schema": {
+                "type": "string"
+              }
+            },
+            {
                 "name": "id",
                 "in": "path",
                 "required": true,
@@ -361,15 +446,6 @@
                 }
             }
           ],
-          "requestBody": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Reclamo"
-                }
-              }
-            }
-          },
           "responses": {
             "200": {
               "description": "El reclamo fue rechazado siendo eliminado de la BD",
@@ -457,20 +533,7 @@
               "description": "El id de la compra a la cual se le realizo un reclamo"
             }
           }
-        },
-        "MedioDePago": {
-            "type": "object",
-            "properties": {
-              "id": {
-                "type": "integer",
-                "description": "El ID autogenerado por MySQL"
-              },
-              "nombre": {
-                "type": "string",
-                "description": "Nombre del metodo de pago"
-              }
-            }
-          }
+        }
     }
   }
 }
